--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,9 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-<!--  <display-name>Archetype Created Web Application</display-name>-->
-
   <servlet>
     <servlet-name>IndexServlet</servlet-name>
-    <servlet-class>org.example.project.IndexServlet</servlet-class>
+    <servlet-class>org.example.project.servlet.IndexServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
